--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "vite": "^4.0.0"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
   }
 }
