--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "sweetalert2": "^11.7.1"
   }
 }
